<resources>
    <string name="app_name">Speed Market</string>
    <string name="please_wait">Perfavore,attendi...</string>
    <string name="your_web_client_id">1070261310550-5383fo3pmovhlqk16vh9std7fsjuapa3.apps.googleusercontent.com</string>
    <string name="messaggio_invio_riuscito_email">Email inviata correttamente</string>
    <string name="messaggio_email">Perfavore,inserisci correttamente l\'email</string>
    <string name="messaggio_inserisci_password">Perfavore,inserisci password</string>
    <string name="messaggio_inserisci_nome">Perfavore,inserisci nome</string>
    <string name="messaggio_inserisci_cognome">Perfavore,inserisci cognome</string>
    <string name="messaggio_inserisci_email">Perfavore,inserisci email</string>
    <string name="messaggio_inserisci_password_conferma">Perfavore,inserisci la password di conferma</string>
    <string name="messaggio_password_diverse">Le due password sono diverse</string>
    <string name="result">Result</string>
    <string name="copy">Copy</string>
    <string name="accedi">ACCEDI</string>
    <string name="registrati">REGISTRATI</string>
    <string name="recupera_la_tua_password">Recupera la tua password</string>
    <string name="inserisci_email">Inserisci l\'email</string>
    <string name="no_connection">Impossibile connettersi ad internet</string>
    <string name="invia">Invia</string>
    <string name="email">Email</string>
    <string name="password">Password:</string>
    <string name="recupera_password">recupera password</string>
    <string name="non_sei_ancora_registrato">Non sei ancora registrato?</string>
    <string name="btn_registrati">Clicca qui</string>
    <string name="accesso_google">Accedi con google:</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="conferma_password">Ripeti password</string>
    <string name="messaggio_registrazione_corretta">Ti sei registrato correttamente</string>
    <string name="ordina_ora">Ordina ora!</string>
    <string name="email_invalida">email invalida</string>
    <string name="messaggio_password_invalida">password con almeno 8 caratteri</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="altri_prodotti_simili">Altri prodotti simili</string>
    <string name="ti_potrebbero_interessare">Ti potrebbero interessare...</string>
    <string name="carrello_vuoto">Il tuo carrello è vuoto</string>
    <string name="catalogo">Catalogo prodotti</string>
    <string name="filtri">Filtri</string>
    <string name="elementi_trovati_n">Elementi trovati n.</string>
    <string name="_0">€0</string>
    <string name="benvenuto">Benvenuto,</string>
    <string name="pagamento">Pagamento</string>
    <string name="upload_image">Upload image</string>
    <string name="i_tuoi_ordini">I tuoi ordini</string>
    <string name="telefono">Telefono</string>
    <string name="residenza">Residenza:</string>
    <string name="citt">-Città</string>
    <string name="cap">-Cap </string>
    <string name="via">-Via  </string>
    <string name="numero_civico">-Civico</string>
    <string name="modifica_profilo">Modifica profilo</string>
    <string name="salva">Salva</string>
    <string name="per_modificare_premere"><![CDATA[Per modificare premere ->]]></string>
    <string name="modifica">Modifica</string>
    <string name="messaggio_inserisci_telefono">Perfavore,inserisci il numero di telefono</string>
    <string name="messaggio_inserisci_citta">Perfavore,inserisci la città</string>
    <string name="messaggio_cap">Perfavore,inserisci il cap della tua città</string>
    <string name="messaggio_via">Perfavore,inserisci la via</string>
    <string name="messaggio_numerocivico">Perfavore,inserisci il numero civico della tua residenza</string>
    <string name="messaggio_seleziona_genere">Perfavore,seleziona il genere</string>
    <string name="messaggio_inserisci_immagine">Perfavore,inserisci la tua immagine di profile,selezionando upload image nella finestra corrente</string>
    <string name="spedizione">Spedizione:</string>
    <string name="citta">Città:</string>
    <string name="provincia">-Provincia:</string>
    <string name="utilizza_un_indirizzo_differente_da_quello_di_residenza">Utilizza un indirizzo differente da quello di residenza</string>
    <string name="messaggio_provincia">Perfavore,inserisci la provincia</string>
    <string name="carta_di_credito">Carta di credito</string>
    <string name="salva_carta">Salva questa carta per acquisti futuri su SpeedMarket</string>
    <string name="esci">esci</string>
    <string name="prodotto">Prodotto</string>
    <string name="quantit">Quantità</string>
    <string name="prezzo">Prezzo</string>
    <string name="riepilogo_ordine">Riepilogo ordine</string>
    <string name="informazioni_spedizione">Informazioni spedizione</string>
    <string name="informazioni_carta">Informazioni carta</string>
    <string name="il_tuo_carrello">Il tuo carrello</string>
    <string name="categoria">Categoria</string>
    <string name="frutta_e_verdura">Frutta e verdura</string>
    <string name="carne">Carne e salumi</string>
    <string name="altra_frutta">Altra frutta</string>
    <string name="_1_oltre">€ 1 - €</string>
    <string name="mostra_i_risultati">Mostra i risultati</string>
    <string name="marchio">Marchio</string>
    <string name="search_marchio">Ricerca il marchio</string>
    <string name="catalogo_vuoto">Catalogo vuoto</string>
    <string name="formaggi_latte_uova">Formaggi latte uova</string>
    <string name="pesce_e_sushi">Pesce e sushi</string>
    <string name="preparazione_dolci_e_salati">Preparazione dolci e salati</string>
    <string name="biscotti_cereali_e_dolci">Biscotti,cereali e dolci</string>
    <string name="caffe_e_infusi">Caffe e infusi</string>
    <string name="condimenti_e_conserve">Condimenti e conserve</string>
    <string name="panetteria_e_snack_salati">Panetteria e snack salati</string>
    <string name="pasta_e_riso">Pasta e riso</string>
    <string name="surgelati_e_gelati">Surgelati e gelati</string>
    <string name="articoli_per_la_casa">Articoli per la casa</string>
    <string name="piatti_pronti">Piatti pronti</string>
    <string name="animali_domestici">Animali domestici</string>
    <string name="vino_birra_e_altri_alcolici">Vino,birra e altri alcolici</string>
    <string name="scannerizza_per_trovare_il_prodotto_che_cerchi">Scannerizza per trovare il prodotto che cerchi-></string>
    <string name="offerte_valide_dal_25_gennaio_al_18_febbraio">Offerte valide dal 25 gennaio al 18 febbraio</string>
    <string name="salva_indirizzo">Salva indirizzo</string>
    <string name="assistenza_modifica_profilo">Puoi modificare i tuoi dati accedendo alla tua area personale.Nella sezione Impostazioni, seleziona la pagina Account. Attraverso il bottone Modifica potrai modificare facilmente tutti i tuoi dati. Clicca per accedere direttamente alla tua area personale.</string>
    <string name="default_ass">Hai bisogno di ulteriore assistenza o preferisci terminare la nostra conversazione?\n
                                                                    -Vorrei parlare con un operatore \n
                                                                    -Ho bisogno di un altra informazione \n
                                                                    -Chiudi la chat</string>
    <string name="assistenza_registrazione_profilo">Per registrarti al sito clicca su \"Registrati\" in basso a destra e successivamente prosegui fino in fondo alla pagina. Segui i passaggi della procedura guidata e, una volta terminati, riceverai una email per completare la registrazione.</string>
    <string name="chiudi_la_chat">Buona giornata,é stato un piacere poterti aiutare!</string>
    <string name="message_default">Ciao! Sono l’assistente della chat di Speed Market.Con cosa ti posso aiutare?</string>
    <string name="turn_flash_on_off">Turn Flash On/Off</string>
    <string name="dettagli_ordine">Dettagli ordine</string>
    <string name="totale_carrello">Totale carrello</string>
    <string name="totale">Totale:</string>
    <string name="subtotale">SubTotale:</string>
    <string name="scannerizza_per_cercare_il_prodotto">Scannerizza il codice a barre per cercare il prodotto-></string>
    <string name="inserisci_il_codice_scannerizzato">Inserisci il codice scannerizzato</string>
    <string name="fetch_Location">Fetch Location</string>
    <string name="location">Using Location in your app has incredible potential in making your app seem intelligent to end users.
    With location data, your app can predict a user’s potential actions</string>
    <string-array name="marchi">
        <item>Conad</item>
        <item>Conad sapori e idee</item>
        <item>Conad sapori e dintorni</item>
        <item>Colfiorito</item>
        <item>Verso natura Conad</item>
        <item>Cannamela</item>
        <item>Ponti</item>
        <item>Chini</item>
        <item>Aia</item>
        <item>Masina</item>
        <item>Casa modena</item>
        <item>Actimel</item>
        <item>Activia</item>
        <item>Alpro</item>
        <item>Accadi</item>
        <item>Chef</item>
        <item>Granarolo</item>
        <item>Naturelle</item>
        <item>Alce nero</item>
        <item>Mulino bianco</item>
        <item>Kinder</item>
        <item>Giampaoli</item>
        <item>Di leo</item>
        <item>Pavesi</item>
        <item>Milka</item>
        <item>Oreo</item>
        <item>Novi</item>
        <item>Oro saiwa</item>
        <item>Pan di stelle</item>
        <item>Cameo</item>
        <item>Lindt</item>
        <item>Hero</item>
        <item>Galbusera</item>
        <item>Kellogg\'s</item>
        <item>Loacker</item>
        <item>Nutella</item>
        <item>Borbone</item>
        <item>Kimbo</item>
        <item>Lavazza</item>
        <item>Segafredo</item>
        <item>Hag</item>
        <item>Star</item>
        <item>Te ati</item>
        <item>Te infre</item>
        <item>Star</item>
        <item>Angelica</item>
        <item>Bonomelli</item>
        <item>Pompadour</item>
        <item>Sogni d\'oro</item>
        <item>Knorr</item>
        <item>Barilla</item>
        <item>Berni</item>
        <item>Calve</item>
        <item>Delevey</item>
        <item>Sacla</item>
        <item>Colfiorito</item>
        <item>Callipo</item>
        <item>Mare blu</item>
        <item>Rio mare</item>
        <item>Nostromo</item>
        <item>Simmenthal</item>
        <item>Grissin bon</item>
        <item>De cecco</item>
        <item>Molisana</item>
        <item>Fiorentini</item>
        <item>Misura</item>
        <item>Galbusera</item>
        <item>Wasa</item>
        <item>Amica chips</item>
        <item>Fonzies</item>
        <item>Pringles</item>
        <item>San carlo</item>
        <item>Frosta</item>
        <item>Capitan findus</item>
        <item>Buitoni</item>
        <item>Findus</item>
        <item>Boundelle</item>
        <item>Algida</item>
        <item>Carte d\'or</item>
        <item>Valmontana</item>
        <item>Valsoia</item>
    </string-array>
    <string-array name="Frutta_e_verdura">
        <item>Frutta fresca</item>
        <item>Frutta secca</item>
        <item>Verdura fresca</item>
        <item>Semi</item>
        <item>Legumi,cereali e funghi</item>
        <item>Frutta conservata</item>
    </string-array>
    <string-array name="Carne_e_salumi">
        <item>Bovino</item>
        <item>Suino</item>
        <item>Pollo e tacchino</item>
        <item>Equino</item>
        <item>Altre carni</item>
        <item>Salumi confezionati e freschi</item>
        <item>Preparazione a base di carne</item>
        <item>Wustel e precotti</item>
    </string-array>
    <string-array name="Pesce_e_sushi">
        <item>Pesce fresco</item>
        <item>Mollushi e crostacei</item>
        <item>Tonno e altro pesce conservato</item>
    </string-array>
</resources>