<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:padding="15dp"
        android:layout_marginTop="30dp">
        <ImageButton
            android:id="@+id/cancelId"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_close"
            android:background="@android:color/transparent"
            android:layout_gravity="right|top"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/recupera_la_tua_password"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/colorBackgroundOrange"
            android:textStyle="bold"
            android:textSize="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_recupera_email"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="@drawable/custom_input_layput">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailrecuperaPassword"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:hint="@string/inserisci_email"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColorHint="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnInvia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/invia"
            android:background="@drawable/button_orange"
            android:textColor="@color/white"
            />

    </LinearLayout>
</RelativeLayout>