<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.impostazioni.profile.DettaglioOrdineFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/yellow">
            <ImageButton
                android:id="@+id/turn_back"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:padding="10dp"
                android:layout_weight="0"
                android:background="@android:color/transparent"
                android:src="@drawable/arrow_white" />
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dettagli_ordine"
                android:textAlignment="viewStart"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
        </LinearLayout>


        <TableLayout
            android:id="@+id/tab_carrello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1,2,3"
            android:background="@color/white"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp">

            <TableRow
                android:layout_width="match_parent"
                android:background="@color/yellow"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/prodotto"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="10dp"
                    android:layout_gravity="end"
                    android:text="@string/quantit"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/prezzo"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    />

            </TableRow>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_riepilogo_carrello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                />
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="30dp"
            android:elevation="10dp"
            android:orientation="vertical"
            android:background="@drawable/button_yellow">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="10dp"
                android:textAlignment="viewStart"
                android:text="@string/totale_carrello"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/payment_bg">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/subtotale"
                    android:paddingStart="10dp"
                    android:textColor="@color/yellow"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/prezzo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/yellow"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/payment_bg">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spedizione"
                    android:paddingStart="10dp"
                    android:textColor="@color/yellow"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/spedizione"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/yellow"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/payment_bg">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/totale"
                    android:textAlignment="viewEnd"
                    android:paddingStart="10dp"
                    android:background="@drawable/button_white"
                    android:textColor="@color/yellow"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/totale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textAlignment="viewEnd"
                    android:background="@drawable/button_white"
                    android:textColor="@color/yellow"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>