<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.carrello.checkOut.SpedizioneFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarAlwaysDrawVerticalTrack="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/image_spedizione"/>
            <TextView
                android:id="@+id/etSpedizione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@null"
                android:text="@string/spedizione"
                android:textAlignment="textStart"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16sp"
                android:textStyle="bold"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Citta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/citt"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_citta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/edit_text_custom"
                    android:elevation="4dp"
                    android:inputType="textPersonName"
                    android:text=""
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/provincia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="0"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/provincia"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_provincia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/edit_text_custom"
                    android:elevation="4dp"
                    android:inputType="textPersonName"
                    android:text=""
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Cap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/cap"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_cap"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/edit_text_custom"
                    android:elevation="4dp"
                    android:inputType="textPersonName"
                    android:text=""
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Via"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/via"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_via"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/edit_text_custom"
                    android:elevation="4dp"
                    android:inputType="textPersonName"
                    android:text=""
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/numero_civico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:layout_weight="0"
                    android:text="@string/numero_civico"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_numero_civico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/edit_text_custom"
                    android:elevation="4dp"
                    android:inputType="textPersonName"
                    android:text=""
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_indirizzo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/utilizza_un_indirizzo_differente_da_quello_di_residenza"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    android:textStyle="italic"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_salva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_salva_indirizzo"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:layout_weight="0"
                    android:drawableStart="@drawable/salva"
                    android:paddingStart="10dp"
                    android:background="@drawable/button_yellow"
                    android:text="@string/salva_indirizzo"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="italic"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>